# docforge

./: .gitignore  README.md  pyproject.toml
apps/cli/: main.py
apps/gui/: app.py  format_settings_dialog.py  main_controller.py  main_view.py  repo_settings_dialog.py
apps/gui/qdom/: __init__.py  context.py  factory.py  node.py
core/config/: loader.py
core/importers/: __init__.py  base.py  chm_importer.py  gitrepo_importer.py  html_importer.py  markdown_importer.py  markitdown_importer.py  registry.py  text_importer.py
core/models/: __init__.py  asset.py  document.py  format_settings.py  repo_settings.py  result.py  section.py  settings.py  split_settings.py
core/pipeline/: __init__.py  context.py  events.py  pipeline.py
core/transformers/: __init__.py  base.py  clean_noise.py  enrich_metadata.py  link_normalizer.py  normalize_heading.py
core/writers/: __init__.py  base.py  jsonl_writer.py  markdown_writer.py  notebooklm_writer.py  report_writer.py
examples/sample_docs/: sample.html  sample.md  sample.txt
tests/: test_config_loader.py  test_format_settings.py  test_importers.py  test_markdown_writer.py  test_models.py  test_per_format_pipeline.py  test_pipeline.py  test_splitter.py
