[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "docforge"
version = "0.1.0"
description = "DocForge converts documents into LLM-ready Markdown knowledge bases."
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.12",
    "html2text>=2024.2",
    "click>=8.1",
]

[project.optional-dependencies]
gui = [
    "PySide6>=6.6",
]
markitdown = [
    "markitdown>=0.0.1",
]
dev = [
    "pytest>=7.4",
    "pytest-cov",
]

[project.scripts]
docforge = "apps.cli.main:cli"

[tool.hatch.build.targets.wheel]
packages = ["apps", "core"]

[tool.pytest.ini_options]
testpaths = ["tests"]
